# MicroGPT

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  embedding.py  graphretriever.py  main.py  pyproject.toml  rag.py  requirements.txt  reranker.py  retreiver.py  vector_store.py
api/: index.py  main.py
nginx/: nginx.conf  nginx.prod.conf
