[project]
name = "microgpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-neo4j>=0.9.0",
    "neo4j>=6.1.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "sentence-transformers>=5.4.1",
    "uvicorn>=0.44.0",
]
